# image_processor

./: README.md
Image_processor/: bmp_reader_writer.cpp  edge_detection.cpp  edge_detection.h  grayscale.cpp  negative.cpp  parser.h  sharpening.h
image_processor/: CMakeLists.txt  bmp_reader_writer.cpp  bmp_reader_writer.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  factory.cpp  factory.h  filter_structure.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  image_processor.cpp  my_filter.cpp  my_filter.h  negative.cpp  parser.cpp  parser.h  sharpening.cpp  sharpening.h
Архив 2/: CMakeLists.txt  bmp_reader_writer.h  conv_filter.cpp  crop.cpp  crop.h  factory.cpp  gaussian_blur.h  grayscale.h  image_processor.cpp  my_filter.cpp  negative.h  sharpening.cpp
